--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "crypto-js": "^3.1.9-1"
   },
   "devDependencies": {
+    "blue-tape": "^1.0.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.0",
     "tape": "^4.8.0"
