--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   "devDependencies": {
     "blue-tape": "^1.0.0",
     "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "tape": "^4.8.0"
+    "rollup-plugin-node-resolve": "^3.0.0"
   }
 }
